Dark mode added... some fixes

--- a/style.css
+++ b/style.css
@@ -3,11 +3,55 @@
     padding: 0px;
     font-family: 'Inter', sans-serif;
 }
+
+.container-fluid {
+    height: 100%;
+}
+
+.card:hover {
+    background-color: red;
+}
 .banner {
     
     width: 100%;
     left: 0px;
 }
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 20px;
+    background-color: rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    transition: all 0.3s;
+    margin-bottom: -6px;
+  }
+  
+  .switch:after {
+    content: '';
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    border-radius: 18px;
+    background-color: white;
+    top: 1px;
+    left: 1px;
+    transition: all 0.3s;
+  }
+  
+  input[type='checkbox']:checked + .switch:after {
+    transform: translateX(20px);
+  }
+  
+  input[type='checkbox']:checked + .switch {
+    background-color: #7983ff;
+  }
+  
+  .offscreen {
+    position: absolute;
+    left: -9999px;
+  }
 
 .broad {
     position: fixed;
@@ -36,7 +80,7 @@
     text-align: right;
     font-size: 14px;
     color: hsl(228, 12%, 44%);
-    padding-right: 15%;
+    padding-right: 11%;
     padding-top: 25px;
 }
 
@@ -134,5 +178,11 @@
     .row-b {
         margin-top: 0;
     }
+
+    /*.card {
+        width: 110%;
+        margin-left: 2%;
+        margin-right: 2%;
+    }*/
 
 }
